# gh-action-workbench

./: .gitignore  Cargo.toml  README.md  get_env.py  pyproject.toml  rustfmt.toml  some_file.py  test_env.py
.github/workflows/: autocommit.yml  build-publish.yml  check-python.yml  check-rust.yml  ci-dep-pkg.yml  ci-pyproject.yml  ci-python-deps.yml  lint-python.yml  lint-rust.yml  meta-env.yml  pr-title.yml  runner-test.yml  test-python.yml  test-rust.yml
dep-pkg/: pyproject.toml
dep-pkg/dep_pkg/: __init__.py
dep-pkg/tests/: test_pkg.py
deploy/oci/: Dockerfile.base  Dockerfile.deploy  Dockerfile.test  Dockerfile.tests
pyrs/: Cargo.toml  pyproject.toml
pyrs/lyrs/: Cargo.toml
pyrs/lyrs/tests/rust/: test_lib.rs
pyrs/python/pyrs/: __init__.py  __main__.py  pyrs_build.pyi
pyrs/src/: lib.rs
pyrs/tests/python/: test_pyrs_build.py
pyrs/tests/rust/: main.rs  test_lib.rs
python/pyrs_build/: __init__.py  __main__.py
src/: lib.rs
tests/python/: test_pyrs_build.py
tests/rust/: test_lib.rs
