[build-system]
requires = ["maturin~=1.0"]
build-backend = "maturin"

[project]
name = "pyrs"
version = "0.1.0"
description = "An example project using Rust bindings."
authors = [
    {name = "John Smith", email = "jsmith@example.com"},
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "tzlocal == 4.2",
]

[projects]
dependencies = ["dep-pkg"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]


[tool.pytest.ini_options]
pythonpath = [
    ".",
]

testpaths = "tests/python"
addopts = [
    "--import-mode=importlib",
    "--color=yes",
]
